# ais-uploader

./: .envrc  Cargo.toml  flake.nix
nix/: ais-uploader.nix
nix-dev/: flake.nix
src/: ais_reformatter.rs  main.rs  upload.rs
src/gpsd_client/: mod.rs  protocol.rs
src/listener/: tcp.rs  udp.rs
